# performance-iq-sdk

./: .gitignore  LICENSE  README.md  SERVING_PRODUCER_TELEMETRY_HANDOFF.md
contracts/: ingestion-request.schema.json  persistence-receipt.schema.json  producer-evidence-manifest.schema.json  producer-lineage.v1.json  producer-run-manifest.schema.json
experimental/kafka/: .env.example  README.md
experimental/kafka/python/: README.md  pyproject.toml
experimental/kafka/python/src/performance_iq_kafka/: __init__.py  publisher.py
experimental/kafka/python/tests/: test_publisher.py
js/: package-lock.json  package.json  tsconfig.json
js/contracts/: deal-packet.schema.json
js/src/: countersign.mjs  countersign.test.mjs  index.test.ts  index.ts  serving.ts  verify-packet.mjs  verify-packet.test.mjs
ops/serving-producers/: Dockerfile.smoke  README.md  dcgm-counters.csv  docker-compose.nvidia.yaml  kubernetes-smoke-job.yaml  performance-iq-serving.env.example  run-nvidia-e2e.sh  run-smoke.sh  tensorrt-llm-config.yaml
performance-iq-output/fake-expanded/: dashboard-row-dump-fake-expanded-20260709T144407Z.json  request-receipts-fake-expanded-20260709T144407Z.jsonl  serving-smoke-proof-fake-expanded-20260709T144407Z.json  sglang-Qwen-Qwen2.5-0.5B-Instruct-2026-07-09T14-44-07-704331Z-manifest.json  (+8 more)
python/: README.md  pyproject.toml
python/src/performance_iq_sdk/: __init__.py  client.py  models.py  serving_fake_engine.py  serving_receipts.py  serving_smoke.py
python/src/performance_iq_sdk/producers/: __init__.py  serving.py
python/tests/: test_sdk.py
(+182 files in other folders)
