[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-iq-sdk"
version = "0.1.0"
description = "Producer-first Python SDK for submitting benchmark evidence into Performance IQ."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Performance IQ contributors" }
]
keywords = ["performance-iq", "benchmark", "evidence", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries"
]

[tool.setuptools.packages.find]
where = ["src"]
